--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
 language: go
-script: go test && bash <(curl -s https://codecov.io/bash)
+
+go:
+  - 1.8.x
+  - tip
+
 notifications:
   email: false
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
